--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.5",
     "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
@@ -21,7 +22,9 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-camera": "~13.1.0",
+    "expo-permissions": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
