--- a/app/package.json
+++ b/app/package.json
@@ -14,17 +14,19 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
+    "@ungap/structured-clone": "^1.0.2",
     "expo": "~47.0.12",
+    "expo-camera": "~13.1.0",
+    "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
+    "fuse.js": "^6.6.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-camera": "~13.1.0",
-    "expo-permissions": "~14.0.0"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
