--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@ungap/structured-clone": "^1.0.2",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
+    "expo-linear-gradient": "^12.1.1",
     "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
     "fuse.js": "^6.6.2",
