--- a/app/package.json
+++ b/app/package.json
@@ -21,13 +21,15 @@
     "expo-permissions": "~14.0.0",
     "expo-status-bar": "~1.4.2",
     "fuse.js": "^6.6.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
