--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,6 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
-    "@ungap/structured-clone": "^1.0.2",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-linear-gradient": "^12.1.1",
@@ -28,11 +27,14 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0",
-    "tailwindcss": "^3.2.7"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.4",
+    "tailwindcss": "^3.2.7"
   },
   "private": true
 }
