--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-linear-gradient": "^12.1.1",
@@ -32,6 +34,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/react-native-vector-icons": "^6.4.13",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
     "tailwindcss": "^3.2.7"
