--- a/app/package.json
+++ b/app/package.json
@@ -1,11 +1,10 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,20 +15,25 @@
     "@react-navigation/stack": "^6.3.14",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "expo": "~47.0.12",
-    "expo-camera": "~13.1.0",
-    "expo-linear-gradient": "^12.1.1",
-    "expo-permissions": "~14.0.0",
-    "expo-status-bar": "~1.4.2",
+    "expo": "~48.0.9",
+    "expo-asset": "^8.9.1",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-permissions": "~14.1.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-storage": "^48.0.1",
     "fuse.js": "^6.6.2",
     "nativewind": "^2.0.11",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react": "18.2.0",
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
