--- a/app/package.json
+++ b/app/package.json
@@ -14,15 +14,12 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
-    "@reduxjs/toolkit": "^1.9.3",
-    "@tensorflow/tfjs": "^4.2.0",
-    "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~48.0.9",
     "expo-asset": "^8.9.1",
     "expo-camera": "~13.2.1",
-    "expo-gl": "~12.4.0",
+    "expo-file-system": "^15.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-permissions": "~14.1.1",
@@ -34,13 +31,11 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "^0.71.6",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
