--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "expo": "~48.0.9",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
